<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context="com.wedesign.mediaplayer.MusicFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/mp3_info_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/progress_really_layout">
            <RelativeLayout
                android:id="@+id/album_icon_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true">
                <ImageView
                    android:id="@+id/album_icon"
                    android:layout_width="218dp"
                    android:layout_height="212dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="74dp"
                    android:background="@mipmap/zhuanji_box"
                    android:scaleType="fitXY"
                    android:src="@mipmap/yinyue"/>

                <TextView
                    android:id="@+id/bt_device_name"
                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:text="@string/shebei"
                    android:layout_marginLeft="74dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:layout_below="@+id/album_icon"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/song_info_layout"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="48dp"
                android:layout_toRightOf="@+id/album_icon_layout"
                android:layout_toLeftOf="@+id/come_from_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/song_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gequmingcheng"
                    android:ems="10"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:layout_marginBottom="20dp"
                    android:textSize="35sp"/>
                <LinearLayout
                    android:id="@+id/zhuanji_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/zhuanji_ico"/>
                    <TextView
                        android:id="@+id/zhuanji_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zhuanji"
                        android:layout_marginLeft="20dp"
                        android:textColor="#ffffff"
                        android:gravity="center"
                        android:textSize="20sp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/singer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/chuangzhe_ico"/>
                    <TextView
                        android:id="@+id/chuangzhe_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/geshou"
                        android:layout_marginLeft="20dp"
                        android:textColor="#ffffff"
                        android:gravity="center"
                        android:textSize="20sp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/order_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_play_mode_ico"
                        android:src="@mipmap/suiji_ico"/>
                    <TextView
                        android:id="@+id/button_play_mode_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suijibofang"
                        android:layout_marginLeft="20dp"
                        android:textColor="#ffffff"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/num_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:layout_weight="1"
                        android:textColor="#ffffff"
                        android:gravity="center"
                        android:textSize="20sp"/>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/come_from_layout"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/yinyuan_background2"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/button_usb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@mipmap/touming_b"
                    android:src="@mipmap/usb_p"
                    />
                <ImageButton
                    android:id="@+id/button_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@mipmap/touming_b"
                    android:src="@mipmap/bt_p"
                    />
                <ImageButton
                    android:id="@+id/button_aux"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@mipmap/touming_b"
                    android:src="@mipmap/aux_p"
                    />
                <ImageButton
                    android:id="@+id/button_SDCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@mipmap/touming_b"
                    android:src="@mipmap/sd_ico_n"
                    />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/progress_really_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/song_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="right"
                android:text="00:00:00"/>
            <SeekBar
                android:id="@+id/seekBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressDrawable = "@drawable/seekbar_define"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:thumb="@drawable/thumb"
                android:thumbOffset="0dp"
                android:minHeight="7dp"
                android:maxHeight="7dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:max="100"
                android:layout_weight="8"
                android:progress="0" />
            <TextView
                android:id="@+id/song_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="00:00:00"/>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
